# imgui-scaling

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: ImGuiScalingConfig.cmake.in
include/ImGuiScaling/: ImGuiScaling.hpp
scripts/: build.sh  rebuild.sh
src/: ImGuiScaling.cpp
